added a listview, and a pop-up container. also changed the design and focused on 4 colors. added fonts and used them.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-   #assets:
   fonts:
-  - family: IndieFlower
-    fonts:
-    - asset: fonts/IndieFlower-Regular.ttf
+    - family: IndieFlower
+      fonts:
+        - asset: fonts/IndieFlower-Regular.ttf
+    - family: BubblegumSans
+      fonts:
+        - asset: fonts/BubblegumSans-Regular.ttf
+
